# multhread

./: CMakeLists.txt
src/: mian.cpp
